--- a/css/style.css
+++ b/css/style.css
@@ -1,651 +1,649 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Noto Sans', 'sans-serif';
-    font-family: "Lexend", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Noto Sans", "sans-serif";
+  font-family: "Lexend", sans-serif;
 }
 
 body {
-    height: 300vh;
-    background-color: #F5F4F9 !important;
+  height: 300vh;
+  background-color: #f5f4f9 !important;
 }
 
 header {
-    background-color: #000000;
-    height: 150px;
-    position: fixed;
-    width: 100%;
-    margin: 0;
-    font-family: "Lexend", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-    z-index: 1000;
+  background-color: #000000;
+  height: 150px;
+  position: fixed;
+  width: 100%;
+  margin: 0;
+  font-family: "Lexend", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  z-index: 1000;
 }
 
 .menu {
-    display: flex;
-    list-style: none;
-    gap: 0.2rem;
-    margin-left: 2rem;
+  display: flex;
+  list-style: none;
+  gap: 0.2rem;
+  margin-left: 2rem;
 }
 
 .menu a {
-    display: block;
-    padding: 0.4;
-    margin-right: 4vw;
-    font-family: "Lexend", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-    color: #efefefad;
-    text-decoration: none;
-    font-size: 15px;
-    font-weight: 400;
+  display: block;
+  padding: 0.4;
+  margin-right: 4vw;
+  font-family: "Lexend", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  color: #efefefad;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 400;
 }
 
 .menu a:hover {
-    color: white;
-    transition: 1s;
+  color: white;
+  transition: 1s;
 }
 
 .menu a.active {
-    color: #fff;
+  color: #fff;
 }
 
 .nav-bar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 10px;
-    gap: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 10px;
+  gap: 100px;
 }
 
 #login-mobile {
-    display: none;
+  display: none;
 }
 
 .logo img {
-    width: 154px;
-    max-width: 100%;
+  width: 154px;
+  max-width: 100%;
 }
 
 .logo h1 {
-    color: #fff;
+  color: #fff;
 }
 
 .nav-list {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .nav-list ul {
-    display: flex;
-    justify-content: center;
-    list-style: none;
+  display: flex;
+  justify-content: center;
+  list-style: none;
 }
 
 #login button {
-    border: 1px solid white;
-    padding: 9px 25px;
+  border: 1px solid white;
+  padding: 9px 25px;
 }
 
 #Sign button {
-    background-color: #3B44F6;
-    padding: 9px 25px;
+  background-color: #3b44f6;
+  padding: 9px 25px;
 }
 
 .login-button button {
-    border: none;
-    background-color: transparent;
-    border-radius: 8px;
-    margin-bottom: 15px;
-    margin-right: 40px;
+  border: none;
+  background-color: transparent;
+  border-radius: 8px;
+  margin-bottom: 15px;
+  margin-right: 40px;
 }
 
 .carrosel {
-    background-color: #010813;
-    width: 100%;
-    height: 100vh;
+  background-color: #010813;
+  width: 100%;
+  height: 100vh;
 }
 
 .login-button button a {
-    text-decoration: none;
-    color: white;
-    font-weight: 500;
-    font-size: 15px;
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  font-size: 15px;
 }
 
 #login a:hover {
-    color: #3B44F6;
-    transition: 1s;
+  color: #3b44f6;
+  transition: 1s;
 }
 
 #Sign button:hover {
-    background-color: transparent;
-    transition: 1s;
-    border: 1px solid white;
+  background-color: transparent;
+  transition: 1s;
+  border: 1px solid white;
 }
 
 #button_mob {
-    display: none;
+  display: none;
 }
 
 td,
 th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
 }
 
 tr:nth-child(even) {
-    background-color: #FFFFFF;
-    color: #000000;
+  background-color: #ffffff;
+  color: #000000;
 }
 
-
 input {
-    flex-direction: column;
-    align-items: flex-start;
-    margin: 10px 0;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 10px 0;
 }
 
 h1 {
-    color: #24252a;
+  color: #24252a;
 }
 
 .btns {
-    display: flex;
+  display: flex;
 }
 
 .home {
-    position: relative;
-    height: 90vh;
-    align-items: center;
-    display: flex;
+  position: relative;
+  height: 90vh;
+  align-items: center;
+  display: flex;
 }
 
 .home {
-    padding: 0px 20% 0px 10%;
+  padding: 0px 20% 0px 10%;
 }
 
 .home-img {
-    width: 1415px;
-    height: 900px;
-    margin-top: 400px;
+  width: 1415px;
+  height: 900px;
+  margin-top: 400px;
 }
 
 .home-text {
-    width: 550px;
+  width: 550px;
 }
 
 .home-img img {
-    width: 110%;
-    height: 70%;
-    object-fit: contain;
+  width: 110%;
+  height: 70%;
+  object-fit: contain;
 }
 
 .home-text h2 {
-    font-size: 3.5rem;
-    font-family: "Lexend", sans-serif;
-    font-weight: bold;
-    color: #fff;
+  font-size: 3.5rem;
+  font-family: "Lexend", sans-serif;
+  font-weight: bold;
+  color: #fff;
 }
 
 #textosobre {
-    line-height: 40px;
+  line-height: 40px;
 }
 
 .home-text p {
-    font-family: "Lexend", sans-serif;
-    font-size: 1.8rem;
-    color: #FFFFFF;
-    margin-bottom: 30px;
-    font-weight: 500;
+  font-family: "Lexend", sans-serif;
+  font-size: 1.8rem;
+  color: #ffffff;
+  margin-bottom: 30px;
+  font-weight: 500;
 }
 
 .text1 {
-    width: 750px;
+  width: 750px;
 }
 
 .text2 {
-    margin-bottom: 70px;
+  margin-bottom: 70px;
 }
 
 .btnget {
-    display: inline-block;
-    padding: 14px 34px;
-    background-color: #3B44F6;
-    color: #fff;
-    border: 2px solid #3B44F6;
-    font-size: 16px;
-    font-weight: 600;
-    border-radius: 8px;
-    text-decoration: none;
-    transition: all 0.6s ease-in-out;
+  display: inline-block;
+  padding: 14px 34px;
+  background-color: #3b44f6;
+  color: #fff;
+  border: 2px solid #3b44f6;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 8px;
+  text-decoration: none;
+  transition: all 0.6s ease-in-out;
 }
 
 .btn:hover {
-    transform: translateY(-5px);
-    background: transparent;
-    color: #3B44F6;
-
+  transform: translateY(-5px);
+  background: transparent;
+  color: #3b44f6;
 }
 
 #two {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
 .nav-manual {
-    width: 100%;
-    display: flex;
-    gap: 10px;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
 }
 
 .btn-manual {
-    border-radius: 100%;
-    padding: 0.32rem;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: 1s;
-    display: flex;
-    justify-content: center;
-    background-color: #efefefad;
-
+  border-radius: 100%;
+  padding: 0.32rem;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: 1s;
+  display: flex;
+  justify-content: center;
+  background-color: #efefefad;
 }
 
 .btn-manual:hover {
-    background-color: #3B44F6;
+  background-color: #3b44f6;
 }
 
 #checked {
-    background-color: #3B44F6;
+  background-color: #3b44f6;
 }
 
 .setas {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    color: #efefefad;
-    font-size: 2rem;
-    transition: 1s;
-    cursor: pointer;
-    display: flex;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  color: #efefefad;
+  font-size: 2rem;
+  transition: 1s;
+  cursor: pointer;
+  display: flex;
 }
 
 #back {
-    margin-top: 25rem;
-    left: 2%;
-    z-index: 1;
+  margin-top: 25rem;
+  left: 2%;
+  z-index: 1;
 }
 
 #next {
-    margin-left: 95.89%;
-    margin-top: 25rem;
-    z-index: 1;
+  margin-left: 95.89%;
+  margin-top: 25rem;
+  z-index: 1;
 }
 
 .textoinicial h1 {
-    text-align: center;
-    margin-top: 20px;
-    align-items: center;
-    font-family: "Lexend", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: bolder;
-    font-style: normal;
-    font-size: 2rem;
-    color: #181818;
-
+  text-align: center;
+  margin-top: 20px;
+  align-items: center;
+  font-family: "Lexend", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bolder;
+  font-style: normal;
+  font-size: 2rem;
+  color: #181818;
 }
 
 .textoinicial p {
-    text-align: center;
-    font-weight: bolder;
-    margin-top: 20px;
-    align-items: center;
-    color: #323232;
-    margin-bottom: 100px;
-
+  text-align: center;
+  font-weight: bolder;
+  margin-top: 20px;
+  align-items: center;
+  color: #323232;
+  margin-bottom: 100px;
 }
 
 .icon {
-    display: block;
-    align-items: center;
-    justify-content: space-between;
+  display: block;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .diferenciais img {
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
-
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .diferenciais {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    gap: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 100px;
 }
 
 .generos h1 {
-    text-align: start;
-    margin-left: 150px;
-    margin-top: 100px;
-    font-weight: bolder;
-    color: #181818;
+  text-align: start;
+  margin-left: 150px;
+  margin-top: 100px;
+  font-weight: bolder;
+  color: #181818;
 }
 
 .generos li {
-    text-align: end;
-    margin-right: 150px;
-    color: #3B44F6;
-    list-style: none;
-    font-weight: 300;
+  text-align: end;
+  margin-right: 150px;
+  color: #3b44f6;
+  list-style: none;
+  font-weight: 300;
 }
 
 .imgjogos {
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
-    transition: 1s;
-    cursor: pointer;
+  width: 200px;
+  height: 200px;
+  border-radius: 10px;
+  transition: 1s;
+  cursor: pointer;
 }
 
 .imgjogos:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .imgjogospai {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #imgjogos1 {
-    background-image: url(../image/strategy.svg);
+  background-image: url(../image/strategy.svg);
 }
 
 #imgjogos2 {
-    background-image: url(../image/fps.svg);
+  background-image: url(../image/fps.svg);
 }
 
 #imgjogos3 {
-    background-image: url(../image/rpg.svg);
+  background-image: url(../image/rpg.svg);
 }
 
 #imgjogos4 {
-    background-image: url(../image/puzzle.svg);
+  background-image: url(../image/puzzle.svg);
 }
 
 #imgjogos5 {
-    background-image: url(../image/role.svg);
+  background-image: url(../image/role.svg);
 }
 
 #imgjogos6 {
-    background-image: url(../image/sports.svg);
+  background-image: url(../image/sports.svg);
 }
 
 .Lanxxx h1 {
-    text-align: start;
-    margin-left: 150px;
-    margin-top: 100px;
-    font-weight: bolder;
-    color: #181818;
+  text-align: start;
+  margin-left: 150px;
+  margin-top: 100px;
+  font-weight: bolder;
+  color: #181818;
 }
 
 .Lanximgs {
-    display: flex;
-    align-items: center;
-    margin-bottom: 50px;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+  justify-content: center;
 }
 .card {
-    transition: 1s;
-    margin-left: 10px;
+  transition: 1s;
+  margin-left: 10px;
 }
 .card:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 .card img {
-    width: 260px;
-    margin-left: 14px;
-    margin-top: 10px;
+  width: 260px;
+  margin-left: 14px;
+  margin-top: 10px;
 }
 
 .card h4 {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .card-text {
-    color: #3B44F6;
+  color: #3b44f6;
 }
 
 .desconto {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .porcento {
-    background-color: #fc326f67;
-    border-radius: 5px;
-    color: #FC326F;
-    padding: 2px;
+  background-color: #fc326f67;
+  border-radius: 5px;
+  color: #fc326f;
+  padding: 2px;
 }
 
 .tachado {
-    padding: 3px;
-    background-color: #F5F4F9;
-    border-radius: 5px;
-    text-decoration: line-through;
+  padding: 3px;
+  background-color: #f5f4f9;
+  border-radius: 5px;
+  text-decoration: line-through;
 }
 
 .Download button {
-    background-color: #D8DAFD;
-    padding: 8px 20px;
-    border: none;
-    border-radius: 5px;
+  background-color: #d8dafd;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 5px;
 }
 
 .Download button a {
-    color: #3B44F6;
-    font-weight: bold;
-    text-decoration: none;
+  color: #3b44f6;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .Lanxxx li {
-    text-align: end;
-    margin-right: 150px;
-    color: #3B44F6;
-    list-style: none;
-    font-weight: 300;
-    margin-bottom: 20px;
+  text-align: end;
+  margin-right: 150px;
+  color: #3b44f6;
+  list-style: none;
+  font-weight: 300;
+  margin-bottom: 20px;
 }
 
 .sliderfundo {
-    height: 155vh;
-    width: 100%;
-    background-color: #0E0E0E;
-    display: flex;
-    gap: 30px;
+  height: 155vh;
+  width: 100%;
+  background-color: #0e0e0e;
+  display: flex;
+  gap: 30px;
 }
 
 #lanxespaco {
-    margin-bottom: 150px;
+  margin-bottom: 150px;
 }
 
 .bt-redes {
-    background-color: transparent;
-    border: none;
-    transition: 1s;
+  background-color: transparent;
+  border: none;
+  transition: 1s;
 }
 
 .fundo h1 {
-    text-align: start;
-    margin-left: 150px;
-    font-weight: bolder;
-    color: #F5F4F9;
-    padding-top: 50px;
+  text-align: start;
+  margin-left: 150px;
+  font-weight: bolder;
+  color: #f5f4f9;
+  padding-top: 50px;
 }
 
 .embreve {
-    display: flex;
-    transition: 1s;
+  display: flex;
+  transition: 1s;
 }
 .embreve:hover {
- transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 #games01 {
-    margin-left: 150px;
-    width: 700px;
-    height: 459px;
-    border-radius: 10px;
-    margin-top: 20px;
-    align-items: start;
-    background-image: url(../image/callof.svg);
-    background-size: cover;
+  margin-left: 150px;
+  width: 700px;
+  height: 459px;
+  border-radius: 10px;
+  margin-top: 20px;
+  align-items: start;
+  background-image: url(../image/callof.svg);
+  background-size: cover;
 }
 
 #games02 {
-    margin-left: 150px;
-    width: 700px;
-    height: 459px;
-    border-radius: 10px;
-    margin-top: 20px;
-    align-items: start;
-    background-image: url(../image/nba.svg);
-    background-size: cover;
+  margin-left: 150px;
+  width: 700px;
+  height: 459px;
+  border-radius: 10px;
+  margin-top: 20px;
+  align-items: start;
+  background-image: url(../image/nba.svg);
+  background-size: cover;
 }
 
 #games03 {
-    width: 500px;
-    height: 300px;
-    border-radius: 10px;
-    margin-top: 20px;
-    align-items: start;
-    background-image: url(../image/fifa23.svg);
-    background-size: cover;
-    margin-top: 125px;
+  width: 500px;
+  height: 300px;
+  border-radius: 10px;
+  margin-top: 20px;
+  align-items: start;
+  background-image: url(../image/fifa23.svg);
+  background-size: cover;
+  margin-top: 125px;
 }
 
 #games04 {
-    width: 500px;
-    height: 300px;
-    border-radius: 10px;
-    margin-top: 20px;
-    align-items: start;
-    background-image: url(../image/residentevill.svg);
-    background-size: cover;
+  width: 500px;
+  height: 300px;
+  border-radius: 10px;
+  margin-top: 20px;
+  align-items: start;
+  background-image: url(../image/residentevill.svg);
+  background-size: cover;
 }
 
 #games05 {
-    width: 500px;
-    height: 300px;
-    border-radius: 10px;
-    margin-top: 20px;
-    align-items: start;
-    background-image: url(../image/aliendark.svg);
-    background-size: cover;
+  width: 500px;
+  height: 300px;
+  border-radius: 10px;
+  margin-top: 20px;
+  align-items: start;
+  background-image: url(../image/aliendark.svg);
+  background-size: cover;
 }
 
 .clientes h1 {
-    margin-top: 100px;
-    text-align: center;
+  margin-top: 100px;
+  text-align: center;
 }
 
 .clientes p {
-    margin-bottom: 100px;
-    text-align: center;
+  margin-bottom: 100px;
+  text-align: center;
 }
 
 .cardsclientes {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    gap: 30px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  gap: 30px;
 }
 
 .card-cliente {
-    width: 450px;
-    height: 430px;
-    border-radius: 10px;
-    margin-bottom: 30px;
+  width: 450px;
+  height: 430px;
+  border-radius: 10px;
+  margin-bottom: 30px;
 }
 
 #card-cliente1 {
-    background-image: url(../image/carl.svg);
-    background-size: cover;
-    height: 450px;
+  background-image: url(../image/carl.svg);
+  background-size: cover;
+  height: 450px;
 }
 
 #card-cliente2 {
-    background-image: url(../image/george.svg);
-    background-size: cover;
+  background-image: url(../image/george.svg);
+  background-size: cover;
 }
 
 #card-cliente3 {
-    background-image: url(../image/marie.svg);
-    background-size: cover;
+  background-image: url(../image/marie.svg);
+  background-size: cover;
 }
 
 footer {
-    width: 100%;
-    display: flex;
-    background-color: #000216;
-    margin-top: 250px;
-    height: 500px;
+  width: 100%;
+  display: flex;
+  background-color: #000216;
+  margin-top: 250px;
+  height: 500px;
 }
 
 .caixa-rodape {
-    margin-top: 60px;
-    width: 320px;
-    min-height: 150px;
-    margin-left: 100px;
+  margin-top: 60px;
+  width: 320px;
+  min-height: 150px;
+  margin-left: 100px;
 }
 
 .logo-rodape {
-    margin-left: 40px;
-    margin-top: 50px;
+  margin-left: 40px;
+  margin-top: 50px;
 }
 
 .caixa-rodape h2 {
-    color: white;
+  color: white;
 }
 
 .caixa-rodape ul {
-    padding-left: 0px;
+  padding-left: 0px;
 }
 
 .caixa-rodape ul li {
-    margin-top: 30px;
-    margin-right: 50px;
-    list-style: none !important;
+  margin-top: 30px;
+  margin-right: 50px;
+  list-style: none !important;
 }
 
 .caixa-rodape ul li a {
-    font-size: 18px;
-    color: #A0A0A0;
-    text-decoration: none !important;
+  font-size: 18px;
+  color: #a0a0a0;
+  text-decoration: none !important;
 }
 .caixa-rodape ul li a:hover {
-    color: white;
+  color: white;
 }
 
 button i {
-    font-size: 3rem;
-    color: #A0A0A0;
-    border: none;
-    cursor: pointer;
-    background: none;
-    margin-left: 10px;
-    transition: 1s;
+  font-size: 3rem;
+  color: #a0a0a0;
+  border: none;
+  cursor: pointer;
+  background: none;
+  margin-left: 10px;
+  transition: 1s;
 }
-button i:hover{
- transform: scale(1.1);
+button i:hover {
+  transform: scale(1.1);
 }
 
+.construcao {
+  width: 500px;
+  height: 500px;
+}
